--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,8 @@
 body{
     background: linear-gradient(to bottom ,#009688 0px ,#009688 15vh,#dadbd4 15vh , #dadbd4 85vh);
     height: calc(100vh - 20px); /*100 vh - 20px dal margine di container*/
+    /* font-family: ; */
+    font-family: 'Heebo', sans-serif;
 }
 
 .container{
@@ -14,7 +16,46 @@ body{
     width: 80%;
     margin: auto;
     margin-top: 20px;
+
+    display: flex;
 }
 
+/* sidebar contatti sx */
+aside{
+    width: 30%;
+    background-color: lightskyblue;
+}
+aside .top{
+    height: 70px;
+    background-color: #dadbd4;
+    font-size: 1.3rem;
+    padding: 10px 0;
 
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+aside .top .icons{
+    margin-right: 5px;
+}
+aside .top .utente{
+    height: 70px;
+}
+aside .top .utente img{
+    border-radius: 100%;
+    height: 100%;
+    vertical-align: middle;
+    margin:0px 10px;
+    padding: 10px 0;
+}
+aside .top .fas{
+    color: #b1b1b1;
+    margin: 0px 5px;
+}
+
+/* sezione dx messaggi */
+.msg{
+    width: 70%;
+    background-color: lime;
+}
 
